ch7-ingress/exercises/ex03/services.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-service
  template:
    metadata:
      labels:
        app: hello-service
    spec:
      containers:
      - name: web
        image: gcr.io/google-samples/hello-app:1.0
---
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  type: ClusterIP # 내부 통신용 ClusterIP 타입
  selector:
    app: hello-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: world-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: world-service
  template:
    metadata:
      labels:
        app: world-service
    spec:
      containers:
      - name: web
        image: gcr.io/google-samples/hello-app:2.0
---
apiVersion: v1
kind: Service
metadata:
  name: world-service
spec:
  type: ClusterIP # 내부 통신용 ClusterIP 타입
  selector:
    app: world-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
